# ai_agent_demo

./: .gitignore  README.md  all_round_prompts.text  examples.txt  main.py  main_lc.py  pyproject.toml  requirements.txt
Agent/: Action.py  ReAct.py
Models/: Factory.py
Tools/: ExcelTool.py  FileQATool.py  PythonTool.py  StructuredTools.py  WriterTool.py  __init__.py
Utils/: CallbackHandlers.py  PrintUtils.py
prompts/tools/: excel_analyser.txt
